--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
+    "normalize.css": "^5.0.0",
     "react": "^15.3.2",
-    "react-autocomplete": "^1.3.1",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
+    "react-select": "^1.0.0-rc.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "style-loader": "^0.13.1"
