--- a/package.json
+++ b/package.json
@@ -97,5 +97,5 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage": "https://1egoman.github.io/lunchbox-webapp"
+  "homepage": "http://www.lunchninja.win"
 }
