--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "react-select": "^1.0.0-rc.2",
+    "react-tag-input": "^4.4.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "style-loader": "^0.13.1"
