--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "@blueprintjs/core": "^1.4.0",
     "classnames": "^2.2.5",
     "mousetrap": "^1.6.0",
     "normalize.css": "^5.0.0",
