--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-dropzone": "^3.7.3",
+    "react-fuzzy-picker": "^0.2.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
